More calibration updates

--- a/Calibration.ipynb
+++ b/Calibration.ipynb
@@ -454,10 +454,6 @@
     "\n",
     "For even greater expressiveness, we could allow polynomial _combinations_ of input elements, such as $x_1 x_2$, $x_1^2 x_2^3$, and so on and so forth.  The canonical monomial basis of maximum degree $d$ consist of all possible products of powers of input elements.  For example, with 3-D input and maximum degree 2, the monomial basis is $(1,x_1,x_2,x_3,x_1^2,x_2^2,x_3^2,x_1 x_2,x_1 x_3,x_2 x_3)$.  In general, there are ${d+n}\\choose{d}$ components in such a feature space.\n",
     "\n",
-    "### Overfitting, and regularization\n",
-    "\n",
-    "As shown above in the polynomial fitting example, it is critically important to realize that goodness-of-fit is only one comopnent of the quality of a model.  The reason is that if the model is given enough parameters to tune, it may be able to fit a given dataset $D$ arbitrarily well.  The ability of a model to fit datasets of a given size is also known as the _capacity_ of the model, and there are indeed models, like neural networks, which can be configured to have vast amounts of capacity.  Let us step back a moment and realize that $D$ only contains a small sampling of the infinite possible situations that we would actually like our model to fit well.  So, our goal is to build a model that _generalizes well_ from a small dataset to the entire space of inputs.  How would we do this when we are only presented with a finite number of data points?  And how ought we deal with the practical labor / time constraints of data gathering, which encourage us to find a dataset as small as possible?\n",
-    "\n",
     "### Separability\n",
     "\n",
     "Separability is a useful property that can break a complex estimation process into several smaller estimation processes.  Suppose we can map our parameter vector into subsets\n",
@@ -469,11 +465,53 @@
     "\n",
     "A similar construction can be used to separate a large estimation into an arbitrary number of independent estimations.\n",
     "\n",
+    "\n",
+    "### Overfitting, generalization, and regularization\n",
+    "\n",
+    "As shown above in the polynomial fitting example, it is critically important to realize that goodness-of-fit is only one comopnent of the quality of a model.  The reason is that if the model is given enough parameters to tune, it may be able to fit a given dataset $D$ arbitrarily well.  The ability of a model to fit datasets of a given size is also known as the _capacity_ of the model, and there are indeed models, like neural networks, which can be configured to have vast amounts of capacity.   Let us step back a moment and realize that $D$ only contains a small sampling of the infinite possible situations that we would actually like our model to fit well.  So, our actual goal is to build a model that _generalizes well_ from a small dataset to the entire space of inputs.\n",
+    "\n",
+    "_Overfitting_ is the name given to the phenomenon where a model achieves a good fit to $D$, while generalizing poorly to inputs that are outside of $D$.  Avoiding overfitting is the primary challenge in estimation problems found in calibration as well as statistics and machine learning.  How can we be sure a model generalizes when we are only presented with a finite number of data points?  And how ought we deal with the practical labor / time constraints of data gathering, which encourage us to find a dataset as small as possible?\n",
+    "\n",
+    "#### Training and testing sets, cross-validation\n",
+    "One possibility is to use an auxiliary draw of the data $D^\\prime$ to represent points outside of the dataset used to estimate the model.  In this way, $D$ is called the _training set_ and $D^\\prime$ is called the _testing set_.  Both are typically assumed to be drawn from the same underlying distribution of real-world conditions.  The value of the error function  $E(\\theta^\\star;D^\\prime)$ on the training set $E(\\theta^\\star;D)$ is called the _training error_ while the value of the error function on the testing set is the _testing error_.  If a model has both low training error and testing error, then assuming the testing set represents real-world conditions, then we can be reasonably assured that it will generalize well.  On the other hand, if testing error is large, then it can be concluded that the model is overfitting.\n",
+    "\n",
+    "It is important in this process **not to train the model on any elements in the testing set**.  The value $\\theta^\\star$ is _fixed_ after minimizing $\\theta^\\star \\gets \\arg \\min_\\theta E(\\theta;D)$, and the testing error is evaluated without re-training on $D^\\star$.  It is often tempting for a beginner to seek lower testing error by also training on $D^\\star$ (i.e., optimizing $E(\\theta;D \\cup D^\\star)$.  But this is the cardinal sin of estimation!  By including elements of the test set into training, the model is \"peeking\" at the test, and hence the seemingly positive results are actually bogus. \n",
+    "\n",
+    "TODO: _Cross-validation_\n",
+    "\n",
+    "#### Regularization\n",
+    "\n",
+    "TODO: describe L2, L1 regularization.\n",
+    "\n",
     "### Performance measurement\n",
     "\n",
-    "Training / testing set\n",
+    "Performance of a calibration should be reported using some error metric both on testing and training sets.\n",
     "\n",
-    "Define SSE, MSE, RMSE, MAE"
+    "Goodness-of-fit can be reported in terms of the following aggregate metrics:\n",
+    "\n",
+    "**Sum of squared errors (SSE)**:\n",
+    "$$\\sum_{i=1} \\|y^{(i)} - \\hat{y}^{(i)}\\|^2$$\n",
+    "\n",
+    "* Advantages: smooth derivatives\n",
+    "* Disdvantages: varies by number of observations, units are units-of-y squared\n",
+    "\n",
+    "**Mean squared error (MSE)**:\n",
+    "$$\\frac{1}{N} \\sum_{i=1} \\|y^{(i)} - \\hat{y}^{(i)}\\|^2$$\n",
+    "* Advantages: smooth derivatives, gives a sense of average performance.  Same optimum as SSE.\n",
+    "* Disdvantages: units are units-of-y squared\n",
+    "\n",
+    "**Root mean squared error (RMSE)**:\n",
+    "$$\\sqrt{\\frac{1}{N} \\sum_{i=1} \\|y^{(i)} - \\hat{y}^{(i)}\\|^2}$$\n",
+    "* Advantages: units are same as units-of-y, gives a sense of average performance.  Same optimum as SSE/MSE.\n",
+    "* Disdvantages: derivatives are not smooth \n",
+    "\n",
+    "**Mean absolute error (MAE)**:\n",
+    "$$\\frac{1}{N} \\sum_{i=1} \\|y^{(i)} - \\hat{y}^{(i)}\\|$$\n",
+    "* Advantages: units are same as units-of-y, gives a sense of average performance\n",
+    "* Disdvantages: derivatives are even less smooth than RMSE\n",
+    "\n",
+    "It can generally be concluded that SSE or MSE are the most convenient for optimization, while RMSE and MAE are most convenient for reporting results.  These can also be generalized to other metrics than the Euclidean distance $d(y,\\hat{y)) = \\|y - \\hat{y}\\|$.\n",
+    "\n"
    ]
   },
   {
@@ -485,24 +523,48 @@
     "In many parametric calibration problems the actual _values of the parameters_ are more important to estimate accurately, rather than a low error value.  For example, if we are calibrating a camera pose, it is not so important what the locations of the markers were during the calibration process.  But the error function directly measures how closely the estimated pose predicts the locations of the markers.  We should hope that if the parameters fit well, then these parameters should also be close to their true values.  But this is not always the case!  In problems that are _identifiable_, we can ensure that parameter estimates will be accurate to some amount proportional to the goodness-of-fit.  In problems that are _non-identifiable_, such guarantees cannot be made.\n",
     "\n",
     "More precisely, we are concerned with whether the estimated parameter values $\\hat{\\V{\\theta}} = \\arg \\min_{\\V{\\theta}} E(\\V{\\theta};D) $ are close to their actual values $\\V{\\theta}$.  Specifically, we are concerned with the estimation error:\n",
-    "$$\\| \\V{\\theta} - \\hat{V{\\theta}} \\|$$\n",
+    "$$\\| \\V{\\theta} - \\hat{\\V{\\theta}} \\|$$\n",
+    "One cause of estimation error is that the dataset $D$ has a finite number of samples which may be noisy, and this noise may affect some dimensions of $\\V{\\theta}^\\star$ more than others.  By studying how the error function relates to parameter variations, we can quantify to a first degree how susceptible our model is to noise.  A second, more severe cause of error is that there may be _multiple parameters that achieve the minimum fitting error_.  Such cases are called non-identifiable.\n",
     "\n",
-    "One cause of estimation error is that the dataset $D$ has a finite number of samples which may be noisy, and this noise may affect some dimensions of $\\V{theta}^\\star$ more than others.  By studying how the error function relates to parameter variations, we can quantify to a first degree how susceptible our model is to noise.  A second, more severe cause of error is that there may be _multiple parameters that achieve the minimum fitting error_.  Such cases are called non-identifiable.\n",
+    "### Non-identifiable problems\n",
     "\n",
-    "Let us study the effect of noise assuming that $E$ is approximated by a quadratic function centered at an optimum $\\theta^\\star$:\n",
+    "Let us study the quadratic Taylor expansion of $E$ centered at an optimum $\\theta^\\star$:\n",
     "$$E(\\theta;D) \\approx E(\\theta^\\star;D) + \\nabla_\\theta E(\\theta^\\star;D) (\\theta - \\theta^\\star) + \\frac{1}{2} (\\theta - \\theta^\\star) \\nabla^2_\\theta E(\\theta^\\star;D)(\\theta - \\theta^\\star). $$\n",
-    "We know that $\\nabla_\\theta E(\\theta^\\star;D)$ because it is an optimum.  Hence we must examine $\\frac{1}{2} (\\theta - \\theta^\\star) \\nabla^2_\\theta E(\\theta^\\star;D)(\\theta - \\theta^\\star)$ to see how the error value changes with changes of $\\theta$.  The Hessian matrix\n",
+    "We know that the gradient  $\\nabla_\\theta E(\\theta^\\star;D)=0$ because it is an optimum.  Hence the behavior of the error function as a function of $\\theta$ is dominated by the term $\\frac{1}{2} (\\theta - \\theta^\\star) \\nabla^2_\\theta E(\\theta^\\star;D)(\\theta - \\theta^\\star)$.  The Hessian matrix\n",
     "$$H = \\nabla^2_\\theta E(\\theta^\\star;D)$$\n",
-    "is the critical term here.  If $H$ is rank deficient, there exists one or more dimensions in $\\theta$ space that locally do not change the error function value.  Hence, a problem is non-identifiable when $H$ is rank deficient.\n",
+    "is the critical quantity here.  If $H$ is rank deficient, there exists one or more dimensions in $\\theta$ space that locally do not change the error function value.  Hence, a problem is non-identifiable when $H$ is rank deficient.\n",
     "\n",
-    "Moreover, since $H$ is a symmetric positive semi-definie matrix at the optimum, the shape of $E$ is locally approximated by a quadratic \"bowl\" shape.  The eigenvalues of $H$ determine the steepness of the bowl in different dimensions.  If $H$ has a low eigenvalue, then "
+    "A common case of rank-deficiency is when there are fewer values in the dataset than unknown parameters: $N dim(\\V{y}) < dim(\\V{\\theta})$.  The solution is to add more data points.  Another common case is a geometric degeneracy.  This can happen when trying to estimate rotations from the 3D locations of two points: there is ambiguity in the axis of rotation.  Another geometric degeneracy is when trying to estimate both the size and distance of an object from a camera image alone.\n",
+    "\n",
+    "\n",
+    "### Parameter sensitivity and standard error\n",
+    "\n",
+    "Let us now return to the question of parameter sensitivity.  Since $E$ is at a minimum, $H$ is a symmetric positive semi-definite matrix.  This implies that the shape of $E$ is locally approximated by a quadratic \"bowl\" shape.  The eigenvalues of $H$ determine the steepness of the bowl in different dimensions.  If $H$ has a small eigenvalue $\\lambda_i$ with corresponding eigenvector $v_i$, then changes of $\\theta$ in the $\\pm v_i$ dimension will have a correspondingly small change of cost.  In particular, if $\\theta$ moves from the optimum by distance $\\pm 1/\\sqrt{\\lambda_i}$ in the direction $v_i$, then the cost will change by approximately 1/2.\n",
+    "\n",
+    "We can make this more precise by a statistical argument.  If we considered the selection of the dataset $D$ as an \"experiment\", and by running more experiments we could draw an increasing number of datasets $D_1,D_2,D_3,\\ldots$.  For each of these datasets, we could run parameter estimation to obtain estimates $\\hat{\\theta}_1,\\hat{\\theta}_2,\\hat{\\theta}_3,\\ldots$, which would not in generally be the same: because of noise in the drawn dataset, each of these estimates will be somewhat different.  We can study how far $\\hat{\\theta}_1,\\hat{\\theta}_2,\\hat{\\theta}_3,\\ldots$ deviate from the true value $\\theta$.  In particular, the covariance matrix\n",
+    "$$Var(\\theta) = \\lim_{N\\rightarrow \\infty} 1/N \\sum_{i=1}^N (\\theta_i - \\theta) (\\theta_i - \\theta)^T$$\n",
+    "tells us how wildly the estimates deviate from the true value.  In particular, the square root of the diagonal of $Var(\\theta)$ is called the _standard error_, and tells us how far $\\hat{\\theta}$ deviates from $\\theta$ on average.\n",
+    "\n",
+    "Via a derivation beyond the scope of this course, if we knew that the probability of drawing a particular $y$ for a given $x$ is proportional to $exp(-0.5 e(y,f(x,\\theta))$, it can be shown that the inverse of the Hessian matrix gives an approximation of the covariance matrix:\n",
+    "$$Var(\\theta) \\approx H^{-1}. $$\n",
+    "In other words, the \"sharper\" the error function at the optimum, the less variability we should expect to see in the parameter estimates.\n",
+    "\n",
+    "In general, the variance decreases proportionally to the inverse of $|D|$, which means the standard error decreases proportionally to the inverse square root of $|D|$.  Hence, to increase accuracy by a factor of 2, the size of the dataset must be increased by a factor of 4; to increase accuracy by a factor of 10, the size of the dataset must be increased by a factor of 100."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nuisance parameters"
+    "## Nuisance parameters\n",
+    "\n",
+    "In many calibration problems we would like to estimate some parameters of concern $\\theta_C$ accurately, but in order to do so we need to estimate other terms in the optimization.  These _nuisance parameters_ are not observables or parameters of concern, but rather deal with some variable encountered during the calibration process.  For example, to calibrate a multi-camera motion capture system, a human will wave a marker in front of the cameras across the workspace.  The trajectory taken by the marker is not important, but we certainly don't have ground truth on this.  Hence, it will need to be optimized.\n",
+    "\n",
+    "To optimize nuisance parameters, we simply gather them in a vector $\\theta_N$ and optimize over the concatenated parameters $\\theta = (\\theta_C,\\theta_N)$.  However, one problem that may arise during the design of the calibration procedure is when nuisance parameters are added for each observation. Then the estimation problem may become unidentifiable (particularly when the number of nuisance parameters exceeds the number of outputs for an observation), or very high dimensional.\n",
+    "\n",
+    "As an example, suppose we are trying to optimize a robot's gripper location (center of the gripper opening) by moving the robot to touch an object at the same local point, but when the object is at a variety of different poses.  We observe configurations $q^{(1)},\\ldots,q^{(N)}$ and object transforms $T_O^{(1)},\\ldots,T_O^{(N)}$.  We wish to estimate $\\V{x}_G^k$, the gripper location on link $k$.   We can derive the link transforms $T_k^{(i)} = T_k(q^{(i)})$ from forward kinematics.  But we do not know the gripper point relative to the object ${\\V{x}_G^O}^{(i)}$, so we consider letting $\\theta_N = ({\\V{x}_G^O}^{(1)},\\ldots,{\\V{x}_G^O}^{(N)})$. Is this identifiable?  Let's examine the error function.  The $i$'th gripper point is $\\V{x}_G^{(i)} = T_k^{(i)} \\V{x}_G^k$, so the predicted gripper coordinates in the object frames are ${T_O^{(i)}}^{-1} T_k^{(i)} \\V{x}_G^k$.  We would like ${T_O^{(i)}}^{-1} T_k^{(i)} \\V{x}_G^k \\approx {\\V{x}_G^O}^{(i)}$ for all $i=1,\\ldots,N$.  This gives only $3N$ constraints and $3+3N$ unknowns!  Hence, this is not identifiable.\n",
+    "\n",
+    "Some care must be taken during the setup procedure.  If we can constrain some of the object-relative gripper positions to be equal, so that $\\V{x}_G^O \\equiv {\\V{x}_G^O}^{(1)}=\\cdots={\\V{x}_G^O}^{(N)}$, then we can set $\\theta_N = \\V{x}_G^O$, and we have only 3 nuisance parameters.  The number of constraints remains at $3N$ and the number of unknowns becomes $3+3=6$."
    ]
   },
   {
