Fixed dijkstra's bug

--- a/GraphSearch.ipynb
+++ b/GraphSearch.ipynb
@@ -206,7 +206,8 @@
     "                #going through v is optimal\n",
     "                #if the predecessor of w is not None, then we'll have to adjust the heap\n",
     "                if p[w] is not None:\n",
-    "                    Q = heapq.heapify([(c,x) for (c,x) in Q if x is not w])\n",
+    "                    Q = [(c,x) for (c,x) in Q if x is not w]\n",
+    "                    heapq.heapify(Q)\n",
     "                d[w] = dcand\n",
     "                p[w] = v\n",
     "                #put w on the queue\n",
